--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:textSize="30dp"
-        android:text="Bluetooth Notification" />
+        android:text="Bluetooth Notification"
+        android:textSize="30dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -110,13 +110,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp"
-            android:text="Bluetooth Alert"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
             android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Bluetooth Alert"
+            android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            android:textAllCaps="false"/>
+            android:textSize="18dp" />
 
         <ToggleButton
             android:id="@+id/switchBluetooth"
@@ -125,8 +125,8 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:checked="false"
             android:background="@drawable/ic_on"
+            android:checked="false"
             android:padding="16dp" />
 
     </RelativeLayout>
@@ -141,13 +141,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="10dp"
-            android:text="Alert Sound"
-            android:textSize="18dp"
-            android:layout_marginTop="10dp"
             android:layout_centerVertical="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Alert Sound"
+            android:textAllCaps="false"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-            android:textAllCaps="false"/>
+            android:textSize="18dp" />
 
         <ToggleButton
             android:id="@+id/switchAlertSound"
@@ -156,22 +156,59 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            android:checked="false"
             android:background="@drawable/ic_on"
+            android:checked="false"
             android:padding="16dp" />
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/btnDevice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="Bluetooth Device"
-        android:textAllCaps="false"
-        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-        android:textSize="16dp"
-        android:padding="20dp"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btnDevice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:padding="20dp"
+                android:text="Bluetooth Device"
+                android:textAllCaps="false"
+                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                android:textSize="16dp" />
+
+            <Button
+                android:id="@+id/btnGet"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="130dp"
+                android:text="Get Paired Devices"
+                android:visibility="gone"/>
+
+            <ListView
+                android:id="@+id/deviceList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <TextView
+                android:id="@+id/textView1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="18dp"
+                android:text="Showing Paired Devices:"
+                android:textSize="14dp"
+                android:visibility="gone" />
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </LinearLayout>
